WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228287
Location.href setter uses wrong window to resolve relative URLs
https://bugs.webkit.org/show_bug.cgi?id=228287
Summary
Location.href setter uses wrong window to resolve relative URLs
Chris Dumez
Reported
2021-07-26 11:20:16 PDT
Location.href setter uses wrong window to resolve relative URLs: -
https://html.spec.whatwg.org/#dom-location-href
Attachments
WIP Patch
(2.12 KB, patch)
2021-07-26 11:20 PDT
,
Chris Dumez
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
WIP Patch
(15.92 KB, patch)
2021-07-26 13:51 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Test that shows the bug
(2.04 KB, patch)
2021-07-26 14:11 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
WIP Patch
(3.70 KB, patch)
2021-07-26 14:47 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(16.02 KB, patch)
2021-07-26 15:36 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(4.81 KB, text/plain)
2021-07-27 02:37 PDT
,
zsun
no flags
Details
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-07-26 11:20:57 PDT
Created
attachment 434218
[details]
WIP Patch
Chris Dumez
Comment 2
2021-07-26 13:51:07 PDT
Created
attachment 434232
[details]
WIP Patch
Chris Dumez
Comment 3
2021-07-26 14:00:54 PDT
Comment on
attachment 434232
[details]
WIP Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=434232&action=review
> LayoutTests/http/tests/dom/window-location-set-href-relative-url-expected.txt:7 > +FAIL popup.location.href should be
http://127.0.0.1:8000/dom/resources/square20.jpg
. Was
http://127.0.0.1:8000/resources/resources/square20.jpg
.
This test is passing in Chrome and Firefox but failing in WebKit (with either firstWindow or activeWindow for the URL resolution).
Chris Dumez
Comment 4
2021-07-26 14:11:14 PDT
Created
attachment 434236
[details]
Test that shows the bug This test passes in Chrome and Firefox but fails in WebKit.
Chris Dumez
Comment 5
2021-07-26 14:47:34 PDT
Created
attachment 434244
[details]
WIP Patch
Chris Dumez
Comment 6
2021-07-26 15:36:46 PDT
Created
attachment 434251
[details]
Patch
EWS
Comment 7
2021-07-26 18:08:07 PDT
Committed
r280333
(
239980@main
): <
https://commits.webkit.org/239980@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434251
[details]
.
Radar WebKit Bug Importer
Comment 8
2021-07-26 18:09:19 PDT
<
rdar://problem/81139879
>
zsun
Comment 9
2021-07-27 02:37:03 PDT
Reopening to attach new patch.
zsun
Comment 10
2021-07-27 02:37:06 PDT
Created
attachment 434278
[details]
Patch
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug